src/components/elements/header-default/index.module.scss
@import "~styles/variables.scss";
@import "~styles/mixins/mixins.scss";

.header {
    z-index: 5;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    font-family: "Montserrat";
    font-size: 16px;
    max-width: 100%;
    background: $--color-white 0% 0% no-repeat padding-box;
    min-height: 122px;
    margin: 0;
    padding: 0 144px 6px 144px;
    display: flex;
    flex-direction: column;
    box-shadow: 0px 3px 6px #00000029;

    &__container {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    &__phone {
        align-self: flex-end;
        color: $--color-orange;
        position: relative;
        bottom: -15px;
    }

    &__logo {
        max-width: 129px;
    }

    &__links {
        display: flex;
        gap: 80px;
    }

    &__link {
        color: $--color-gray1;
        font-size: 16px;
        text-decoration: none;

        &_place_menu {
            padding: 10px 20px 5px 20px;
            color: $--color-gray1;
            font-size: 16px;
            text-decoration: none;
            width: 100%;
        }
    }

    &__button {
        font-family: "Montserrat";
        font-size: 16px;
        color: $--color-gray1;
        border: none;
        background-color: rgba(0, 0, 0, 0);
        margin: 0;
        padding: 0;
        cursor: pointer;
    }
}

